--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,6 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+<br><br>
+<a href="/auth/register">Register</a>
+<br><br>
+<a href="/auth/login">Login</a>
